examples/type_system/failing/21_perform_unknown_operation.flx
// E404: perform uses an operation that is not declared by the effect.

effect Console {
    print: String -> ()
}

fn bad() -> Unit with Console {
    perform Console.read("x")
}

fn main() with Console {
    bad()
}
